--- a/test6/ui/login.html
+++ b/test6/ui/login.html
@@ -138,6 +138,24 @@
           <p><span>登录用例,该用例为独立页面</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u24" class="ax_default label">
+        <div id="u24_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u25" class="text">
+          <p><span>系统主页用例图</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u26" class="ax_default line">
+        <img id="u26_img" class="img " src="images/login/u26.png"/>
+        <!-- Unnamed () -->
+        <div id="u27" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
