--- a/test6/ui/index.html
+++ b/test6/ui/index.html
@@ -25,59 +25,41 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u24" class="ax_default box_1">
-        <div id="u24_div" class=""></div>
+      <div id="u28" class="ax_default box_1">
+        <div id="u28_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u25" class="text" style="display:none; visibility: hidden">
+        <div id="u29" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u26" class="ax_default box_1">
-        <img id="u26_img" class="img " src="images/index/u26.png"/>
+      <div id="u30" class="ax_default box_1">
+        <img id="u30_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u27" class="text">
+        <div id="u31" class="text">
           <p><span>信息系统分析设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (内联框架) -->
-      <div id="u28" class="ax_default">
-        <iframe id="u28_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u32" class="ax_default">
+        <iframe id="u32_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u29" class="ax_default">
-        <img id="u29_menu" class="img " src="images/index/u29_menu.png" alt="u29_menu"/>
+      <div id="u33" class="ax_default">
+        <img id="u33_menu" class="img " src="images/index/u33_menu.png" alt="u33_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u30" class="ax_default">
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u31" class="ax_default menu_item">
-            <img id="u31_img" class="img " src="images/index/u31.png"/>
-            <!-- Unnamed () -->
-            <div id="u32" class="text">
-              <p><span>首页</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u33" class="ax_default menu_item">
-            <img id="u33_img" class="img " src="images/index/u33.png"/>
-            <!-- Unnamed () -->
-            <div id="u34" class="text">
-              <p><span>查看成绩</span></p>
-            </div>
-          </div>
+        <div id="u34" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
           <div id="u35" class="ax_default menu_item">
             <img id="u35_img" class="img " src="images/index/u35.png"/>
             <!-- Unnamed () -->
             <div id="u36" class="text">
-              <p><span>学生列表</span></p>
+              <p><span>首页</span></p>
             </div>
           </div>
 
@@ -86,7 +68,7 @@
             <img id="u37_img" class="img " src="images/index/u37.png"/>
             <!-- Unnamed () -->
             <div id="u38" class="text">
-              <p><span>个人信息</span></p>
+              <p><span>查看成绩</span></p>
             </div>
           </div>
 
@@ -95,7 +77,7 @@
             <img id="u39_img" class="img " src="images/index/u39.png"/>
             <!-- Unnamed () -->
             <div id="u40" class="text">
-              <p><span>修改密码</span></p>
+              <p><span>学生列表</span></p>
             </div>
           </div>
 
@@ -104,6 +86,24 @@
             <img id="u41_img" class="img " src="images/index/u41.png"/>
             <!-- Unnamed () -->
             <div id="u42" class="text">
+              <p><span>个人信息</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u43" class="ax_default menu_item">
+            <img id="u43_img" class="img " src="images/index/u43.png"/>
+            <!-- Unnamed () -->
+            <div id="u44" class="text">
+              <p><span>修改密码</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u45" class="ax_default menu_item">
+            <img id="u45_img" class="img " src="images/index/u45.png"/>
+            <!-- Unnamed () -->
+            <div id="u46" class="text">
               <p><span>安全退出</span></p>
             </div>
           </div>
@@ -111,38 +111,20 @@
       </div>
 
       <!-- Unnamed (正水滴形) -->
-      <div id="u43" class="ax_default marker">
-        <img id="u43_img" class="img " src="images/login/u4.png"/>
+      <div id="u47" class="ax_default marker">
+        <img id="u47_img" class="img " src="images/login/u4.png"/>
         <!-- Unnamed () -->
-        <div id="u44" class="text" style="display:none; visibility: hidden">
+        <div id="u48" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u45" class="ax_default _一级标题">
-        <div id="u45_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u46" class="text">
-          <p><span>欢迎使用</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u47" class="ax_default label">
-        <div id="u47_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u48" class="text">
-          <p><span>以学生用户状态登录</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u49" class="ax_default label">
+      <div id="u49" class="ax_default _一级标题">
         <div id="u49_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u50" class="text">
-          <p><span>顶部下拉菜单</span></p>
+          <p><span>欢迎使用</span></p>
         </div>
       </div>
 
@@ -151,7 +133,7 @@
         <div id="u51_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u52" class="text">
-          <p><span>左侧菜单栏</span></p>
+          <p><span>以学生用户状态登录</span></p>
         </div>
       </div>
 
@@ -160,7 +142,7 @@
         <div id="u53_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u54" class="text">
-          <p><span>中央内容区</span></p>
+          <p><span>顶部下拉菜单</span></p>
         </div>
       </div>
 
@@ -169,61 +151,79 @@
         <div id="u55_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u56" class="text">
+          <p><span>左侧菜单栏</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u57" class="ax_default label">
+        <div id="u57_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u58" class="text">
+          <p><span>中央内容区</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u59" class="ax_default label">
+        <div id="u59_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u60" class="text">
           <p><span>系统主页用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u57" class="ax_default">
+      <div id="u61" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u58" class="ax_default menu_item">
-          <img id="u58_img" class="img " src="images/index/u58.png"/>
+        <div id="u62" class="ax_default menu_item">
+          <img id="u62_img" class="img " src="images/index/u62.png"/>
           <!-- Unnamed () -->
-          <div id="u59" class="text" style="display:none; visibility: hidden">
+          <div id="u63" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u60" class="ax_default">
-        <img id="u60_menu" class="img " src="images/index/u60_menu.png" alt="u60_menu"/>
+      <div id="u64" class="ax_default">
+        <img id="u64_menu" class="img " src="images/index/u64_menu.png" alt="u64_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u61" class="ax_default">
+        <div id="u65" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u62" class="ax_default menu_item">
-            <img id="u62_img" class="img " src="images/index/u62.png"/>
+          <div id="u66" class="ax_default menu_item">
+            <img id="u66_img" class="img " src="images/index/u66.png"/>
             <!-- Unnamed () -->
-            <div id="u63" class="text">
+            <div id="u67" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u64" class="ax_default sub_menu">
-          <img id="u64_menu" class="img " src="images/index/u64_menu.png" alt="u64_menu"/>
+        <div id="u68" class="ax_default sub_menu">
+          <img id="u68_menu" class="img " src="images/index/u68_menu.png" alt="u68_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u65" class="ax_default">
+          <div id="u69" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u66" class="ax_default menu_item">
-              <img id="u66_img" class="img " src="images/index/u66.png"/>
+            <div id="u70" class="ax_default menu_item">
+              <img id="u70_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u67" class="text">
+              <div id="u71" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u68" class="ax_default menu_item">
-              <img id="u68_img" class="img " src="images/index/u58.png"/>
+            <div id="u72" class="ax_default menu_item">
+              <img id="u72_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u69" class="text">
+              <div id="u73" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -232,19 +232,55 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u70" class="ax_default label">
-        <div id="u70_div" class=""></div>
+      <div id="u74" class="ax_default label">
+        <div id="u74_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u71" class="text">
+        <div id="u75" class="text">
           <p><span>主要功能菜单项</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u72" class="ax_default line">
-        <img id="u72_img" class="img " src="images/index/u72.png"/>
+      <div id="u76" class="ax_default line">
+        <img id="u76_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u73" class="text" style="display:none; visibility: hidden">
+        <div id="u77" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u78" class="ax_default link_button">
+        <div id="u78_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u79" class="text">
+          <p><span>评定成绩</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u80" class="ax_default label">
+        <div id="u80_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u81" class="text">
+          <p><span>老师评定成绩链接</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u82" class="ax_default line">
+        <img id="u82_img" class="img " src="images/index/u82.png"/>
+        <!-- Unnamed () -->
+        <div id="u83" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u84" class="ax_default line">
+        <img id="u84_img" class="img " src="images/index/u84.png"/>
+        <!-- Unnamed () -->
+        <div id="u85" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
