--- a/test6/ui/评定成绩.html
+++ b/test6/ui/评定成绩.html
@@ -466,93 +466,93 @@
         <div id="u180_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u181" class="text">
-          <p><span>上方菜单栏:老师登录</span></p>
+          <p><span style="color:#00CC00;">上方菜单栏:老师登录 接口:</span><a id="u182" class="link"><span style="color:#0000FF;">login</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u182" class="ax_default label">
-        <div id="u182_div" class=""></div>
+      <div id="u183" class="ax_default label">
+        <div id="u183_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u183" class="text">
+        <div id="u184" class="text">
           <p><span>选择学期</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u184" class="ax_default label">
-        <div id="u184_div" class=""></div>
+      <div id="u185" class="ax_default label">
+        <div id="u185_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u185" class="text">
+        <div id="u186" class="text">
           <p><span>级联选择课程</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u186" class="ax_default label">
-        <div id="u186_div" class=""></div>
+      <div id="u187" class="ax_default label">
+        <div id="u187_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u187" class="text">
+        <div id="u188" class="text">
           <p><span>全部成绩提交按钮</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u188" class="ax_default label">
-        <div id="u188_div" class=""></div>
+      <div id="u189" class="ax_default label">
+        <div id="u189_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u189" class="text">
+        <div id="u190" class="text">
           <p><span>按不同实验,不同的part评分,最后综合总分</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u190" class="ax_default label">
-        <div id="u190_div" class=""></div>
+      <div id="u191" class="ax_default label">
+        <div id="u191_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u191" class="text">
+        <div id="u192" class="text">
           <p><span>评定成绩用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u192" class="ax_default">
-        <img id="u192_menu" class="img " src="images/index/u64_menu.png" alt="u192_menu"/>
+      <div id="u193" class="ax_default">
+        <img id="u193_menu" class="img " src="images/index/u64_menu.png" alt="u193_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u193" class="ax_default">
+        <div id="u194" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u194" class="ax_default menu_item">
-            <img id="u194_img" class="img " src="images/index/u62.png"/>
+          <div id="u195" class="ax_default menu_item">
+            <img id="u195_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u195" class="text">
+            <div id="u196" class="text">
               <p><span>老师</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u196" class="ax_default sub_menu">
-          <img id="u196_menu" class="img " src="images/index/u68_menu.png" alt="u196_menu"/>
+        <div id="u197" class="ax_default sub_menu">
+          <img id="u197_menu" class="img " src="images/index/u68_menu.png" alt="u197_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u197" class="ax_default">
+          <div id="u198" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u198" class="ax_default menu_item">
-              <img id="u198_img" class="img " src="images/index/u70.png"/>
+            <div id="u199" class="ax_default menu_item">
+              <img id="u199_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u199" class="text">
+              <div id="u200" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u200" class="ax_default menu_item">
-              <img id="u200_img" class="img " src="images/index/u62.png"/>
+            <div id="u201" class="ax_default menu_item">
+              <img id="u201_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u201" class="text">
+              <div id="u202" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -561,89 +561,89 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u202" class="ax_default line">
-        <img id="u202_img" class="img " src="images/login/u26.png"/>
+      <div id="u203" class="ax_default line">
+        <img id="u203_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u203" class="text" style="display:none; visibility: hidden">
+        <div id="u204" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u204" class="ax_default line">
-        <img id="u204_img" class="img " src="images/评定成绩/u204.png"/>
+      <div id="u205" class="ax_default line">
+        <img id="u205_img" class="img " src="images/评定成绩/u205.png"/>
         <!-- Unnamed () -->
-        <div id="u205" class="text" style="display:none; visibility: hidden">
+        <div id="u206" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u206" class="ax_default label">
-        <div id="u206_div" class=""></div>
+      <div id="u207" class="ax_default label">
+        <div id="u207_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u207" class="text">
+        <div id="u208" class="text">
           <p><span>选择学期用例以及&nbsp; 接口:getCourses</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u208" class="ax_default label">
-        <div id="u208_div" class=""></div>
+      <div id="u209" class="ax_default label">
+        <div id="u209_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u209" class="text">
+        <div id="u210" class="text">
           <p><span>选择课程用例以及&nbsp; 接口:getTerms</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u210" class="ax_default line">
-        <img id="u210_img" class="img " src="images/评定成绩/u210.png"/>
+      <div id="u211" class="ax_default line">
+        <img id="u211_img" class="img " src="images/评定成绩/u211.png"/>
         <!-- Unnamed () -->
-        <div id="u211" class="text" style="display:none; visibility: hidden">
+        <div id="u212" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u212" class="ax_default line">
-        <img id="u212_img" class="img " src="images/评定成绩/u212.png"/>
+      <div id="u213" class="ax_default line">
+        <img id="u213_img" class="img " src="images/评定成绩/u213.png"/>
         <!-- Unnamed () -->
-        <div id="u213" class="text" style="display:none; visibility: hidden">
+        <div id="u214" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u214" class="ax_default box_1">
-        <div id="u214_div" class=""></div>
+      <div id="u215" class="ax_default box_1">
+        <div id="u215_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u215" class="text">
+        <div id="u216" class="text">
           <p><span>姓名:巫恒强</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u216" class="ax_default button">
-        <div id="u216_div" class=""></div>
+      <div id="u217" class="ax_default button">
+        <div id="u217_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u217" class="text">
+        <div id="u218" class="text">
           <p><span>上一个</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u218" class="ax_default button">
-        <div id="u218_div" class=""></div>
+      <div id="u219" class="ax_default button">
+        <div id="u219_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u219" class="text">
+        <div id="u220" class="text">
           <p><span>上一个</span></p>
         </div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
-      <div id="u220" class="ax_default droplist">
-        <select id="u220_input">
+      <div id="u221" class="ax_default droplist">
+        <select id="u221_input">
           <option selected value="学生">学生</option>
           <option value="巫恒强">巫恒强</option>
           <option value="巫恒强2">巫恒强2</option>
@@ -653,37 +653,37 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u221" class="ax_default label">
-        <div id="u221_div" class=""></div>
+      <div id="u222" class="ax_default label">
+        <div id="u222_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u222" class="text">
+        <div id="u223" class="text">
           <p><span>可编辑的文本框</span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u223" class="ax_default line">
-        <img id="u223_img" class="img " src="images/评定成绩/u212.png"/>
+      <div id="u224" class="ax_default line">
+        <img id="u224_img" class="img " src="images/评定成绩/u213.png"/>
         <!-- Unnamed () -->
-        <div id="u224" class="text" style="display:none; visibility: hidden">
+        <div id="u225" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u225" class="ax_default line">
-        <img id="u225_img" class="img " src="images/评定成绩/u225.png"/>
+      <div id="u226" class="ax_default line">
+        <img id="u226_img" class="img " src="images/评定成绩/u226.png"/>
         <!-- Unnamed () -->
-        <div id="u226" class="text" style="display:none; visibility: hidden">
+        <div id="u227" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u227" class="ax_default label">
-        <div id="u227_div" class=""></div>
+      <div id="u228" class="ax_default label">
+        <div id="u228_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u228" class="text">
+        <div id="u229" class="text">
           <p><span>学生列表用例以及 接口:getStudents</span></p>
         </div>
       </div>
