--- a/test6/ui/评定成绩.html
+++ b/test6/ui/评定成绩.html
@@ -583,25 +583,16 @@
         <div id="u207_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u208" class="text">
-          <p><span>选择学期用例以及&nbsp; 接口:getCourses</span></p>
+          <p><span style="color:#00CC00;">选择学期用例以及&nbsp; 接口:</span><a id="u209" class="link"><span style="color:#0000FF;">getCourses</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u209" class="ax_default label">
-        <div id="u209_div" class=""></div>
+      <div id="u210" class="ax_default label">
+        <div id="u210_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u210" class="text">
-          <p><span>选择课程用例以及&nbsp; 接口:getTerms</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (水平线) -->
-      <div id="u211" class="ax_default line">
-        <img id="u211_img" class="img " src="images/评定成绩/u211.png"/>
-        <!-- Unnamed () -->
-        <div id="u212" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
+        <div id="u211" class="text">
+          <p><span style="color:#00CC00;">选择课程用例以及&nbsp; 接口:</span><a id="u212" class="link"><span style="color:#0000FF;">getTerms</span></a></p>
         </div>
       </div>
 
@@ -614,21 +605,21 @@
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u215" class="ax_default box_1">
-        <div id="u215_div" class=""></div>
+      <!-- Unnamed (水平线) -->
+      <div id="u215" class="ax_default line">
+        <img id="u215_img" class="img " src="images/评定成绩/u215.png"/>
         <!-- Unnamed () -->
-        <div id="u216" class="text">
-          <p><span>姓名:巫恒强</span></p>
+        <div id="u216" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u217" class="ax_default button">
+      <div id="u217" class="ax_default box_1">
         <div id="u217_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u218" class="text">
-          <p><span>上一个</span></p>
+          <p><span>姓名:巫恒强</span></p>
         </div>
       </div>
 
@@ -641,9 +632,18 @@
         </div>
       </div>
 
+      <!-- Unnamed (矩形) -->
+      <div id="u221" class="ax_default button">
+        <div id="u221_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u222" class="text">
+          <p><span>上一个</span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (下拉列表框) -->
-      <div id="u221" class="ax_default droplist">
-        <select id="u221_input">
+      <div id="u223" class="ax_default droplist">
+        <select id="u223_input">
           <option selected value="学生">学生</option>
           <option value="巫恒强">巫恒强</option>
           <option value="巫恒强2">巫恒强2</option>
@@ -653,38 +653,56 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u222" class="ax_default label">
-        <div id="u222_div" class=""></div>
+      <div id="u224" class="ax_default label">
+        <div id="u224_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u223" class="text">
+        <div id="u225" class="text">
           <p><span>可编辑的文本框</span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u224" class="ax_default line">
-        <img id="u224_img" class="img " src="images/评定成绩/u213.png"/>
-        <!-- Unnamed () -->
-        <div id="u225" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (水平线) -->
       <div id="u226" class="ax_default line">
-        <img id="u226_img" class="img " src="images/评定成绩/u226.png"/>
+        <img id="u226_img" class="img " src="images/评定成绩/u215.png"/>
         <!-- Unnamed () -->
         <div id="u227" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u228" class="ax_default label">
-        <div id="u228_div" class=""></div>
+      <!-- Unnamed (水平线) -->
+      <div id="u228" class="ax_default line">
+        <img id="u228_img" class="img " src="images/评定成绩/u228.png"/>
         <!-- Unnamed () -->
-        <div id="u229" class="text">
-          <p><span>学生列表用例以及 接口:getStudents</span></p>
+        <div id="u229" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u230" class="ax_default label">
+        <div id="u230_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u231" class="text">
+          <p><span style="color:#00CC00;">学生列表用例以及 接口:</span><a id="u232" class="link"><span style="color:#0000FF;">getStudents</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u233" class="ax_default line">
+        <img id="u233_img" class="img " src="images/评定成绩/u233.png"/>
+        <!-- Unnamed () -->
+        <div id="u234" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u235" class="ax_default label">
+        <div id="u235_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u236" class="text">
+          <p><span style="color:#00CC00;">下一个,或上一个学生 接口:</span><a id="u237" class="link"><span style="color:#0000FF;">getNextPrevStudent</span></a></p>
         </div>
       </div>
     </div>
