--- a/test6/ui/个人信息.html
+++ b/test6/ui/个人信息.html
@@ -25,85 +25,85 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u439" class="ax_default box_1">
-        <div id="u439_div" class=""></div>
+      <div id="u455" class="ax_default box_1">
+        <div id="u455_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u440" class="text" style="display:none; visibility: hidden">
+        <div id="u456" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u441" class="ax_default box_1">
-        <img id="u441_img" class="img " src="images/index/u30.png"/>
+      <div id="u457" class="ax_default box_1">
+        <img id="u457_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u442" class="text">
+        <div id="u458" class="text">
           <p><span>信息系统分析设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (内联框架) -->
-      <div id="u443" class="ax_default">
-        <iframe id="u443_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u459" class="ax_default">
+        <iframe id="u459_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u444" class="ax_default">
-        <img id="u444_menu" class="img " src="images/index/u33_menu.png" alt="u444_menu"/>
+      <div id="u460" class="ax_default">
+        <img id="u460_menu" class="img " src="images/index/u33_menu.png" alt="u460_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u445" class="ax_default">
+        <div id="u461" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u446" class="ax_default menu_item">
-            <img id="u446_img" class="img " src="images/index/u35.png"/>
+          <div id="u462" class="ax_default menu_item">
+            <img id="u462_img" class="img " src="images/index/u35.png"/>
             <!-- Unnamed () -->
-            <div id="u447" class="text">
+            <div id="u463" class="text">
               <p><span>首页</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u448" class="ax_default menu_item">
-            <img id="u448_img" class="img " src="images/index/u37.png"/>
+          <div id="u464" class="ax_default menu_item">
+            <img id="u464_img" class="img " src="images/index/u37.png"/>
             <!-- Unnamed () -->
-            <div id="u449" class="text">
+            <div id="u465" class="text">
               <p><span>查看成绩</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u450" class="ax_default menu_item">
-            <img id="u450_img" class="img " src="images/index/u39.png"/>
+          <div id="u466" class="ax_default menu_item">
+            <img id="u466_img" class="img " src="images/index/u39.png"/>
             <!-- Unnamed () -->
-            <div id="u451" class="text">
+            <div id="u467" class="text">
               <p><span>学生列表</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u452" class="ax_default menu_item">
-            <img id="u452_img" class="img " src="images/index/u41.png"/>
+          <div id="u468" class="ax_default menu_item">
+            <img id="u468_img" class="img " src="images/index/u41.png"/>
             <!-- Unnamed () -->
-            <div id="u453" class="text">
+            <div id="u469" class="text">
               <p><span>个人信息</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u454" class="ax_default menu_item">
-            <img id="u454_img" class="img " src="images/index/u43.png"/>
+          <div id="u470" class="ax_default menu_item">
+            <img id="u470_img" class="img " src="images/index/u43.png"/>
             <!-- Unnamed () -->
-            <div id="u455" class="text">
+            <div id="u471" class="text">
               <p><span>修改密码</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u456" class="ax_default menu_item">
-            <img id="u456_img" class="img " src="images/index/u45.png"/>
+          <div id="u472" class="ax_default menu_item">
+            <img id="u472_img" class="img " src="images/index/u45.png"/>
             <!-- Unnamed () -->
-            <div id="u457" class="text">
+            <div id="u473" class="text">
               <p><span>安全退出</span></p>
             </div>
           </div>
@@ -111,104 +111,32 @@
       </div>
 
       <!-- Unnamed (正水滴形) -->
-      <div id="u458" class="ax_default marker">
-        <img id="u458_img" class="img " src="images/login/u4.png"/>
+      <div id="u474" class="ax_default marker">
+        <img id="u474_img" class="img " src="images/login/u4.png"/>
         <!-- Unnamed () -->
-        <div id="u459" class="text" style="display:none; visibility: hidden">
+        <div id="u475" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u460" class="ax_default box_3">
-        <div id="u460_div" class=""></div>
+      <div id="u476" class="ax_default box_3">
+        <div id="u476_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u461" class="text" style="display:none; visibility: hidden">
+        <div id="u477" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u462" class="ax_default">
-
-        <!-- Unnamed (单元格) -->
-        <div id="u463" class="ax_default table_cell">
-          <img id="u463_img" class="img " src="images/个人信息/u463.png"/>
-          <!-- Unnamed () -->
-          <div id="u464" class="text">
-            <p><span>学号/工号:</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u465" class="ax_default table_cell">
-          <img id="u465_img" class="img " src="images/个人信息/u465.png"/>
-          <!-- Unnamed () -->
-          <div id="u466" class="text">
-            <p><span>201510414220</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u467" class="ax_default table_cell">
-          <img id="u467_img" class="img " src="images/个人信息/u463.png"/>
-          <!-- Unnamed () -->
-          <div id="u468" class="text">
-            <p><span>姓名:</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u469" class="ax_default table_cell">
-          <img id="u469_img" class="img " src="images/个人信息/u465.png"/>
-          <!-- Unnamed () -->
-          <div id="u470" class="text">
-            <p><span>巫恒强</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u471" class="ax_default table_cell">
-          <img id="u471_img" class="img " src="images/个人信息/u463.png"/>
-          <!-- Unnamed () -->
-          <div id="u472" class="text">
-            <p><span>班级部门:</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u473" class="ax_default table_cell">
-          <img id="u473_img" class="img " src="images/个人信息/u465.png"/>
-          <!-- Unnamed () -->
-          <div id="u474" class="text">
-            <p><span>软件(本)15-2</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u475" class="ax_default table_cell">
-          <img id="u475_img" class="img " src="images/个人信息/u463.png"/>
-          <!-- Unnamed () -->
-          <div id="u476" class="text">
-            <p><span>GItHub账号:</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (单元格) -->
-        <div id="u477" class="ax_default table_cell">
-          <img id="u477_img" class="img " src="images/个人信息/u465.png"/>
-          <!-- Unnamed () -->
-          <div id="u478" class="text">
-            <p><span>wuhengqiang100</span></p>
-          </div>
-        </div>
+      <div id="u478" class="ax_default">
 
         <!-- Unnamed (单元格) -->
         <div id="u479" class="ax_default table_cell">
           <img id="u479_img" class="img " src="images/个人信息/u479.png"/>
           <!-- Unnamed () -->
           <div id="u480" class="text">
-            <p><span>类型:</span></p>
+            <p><span>学号/工号:</span></p>
           </div>
         </div>
 
@@ -217,116 +145,206 @@
           <img id="u481_img" class="img " src="images/个人信息/u481.png"/>
           <!-- Unnamed () -->
           <div id="u482" class="text">
+            <p><span>201510414220</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u483" class="ax_default table_cell">
+          <img id="u483_img" class="img " src="images/个人信息/u479.png"/>
+          <!-- Unnamed () -->
+          <div id="u484" class="text">
+            <p><span>姓名:</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u485" class="ax_default table_cell">
+          <img id="u485_img" class="img " src="images/个人信息/u481.png"/>
+          <!-- Unnamed () -->
+          <div id="u486" class="text">
+            <p><span>巫恒强</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u487" class="ax_default table_cell">
+          <img id="u487_img" class="img " src="images/个人信息/u479.png"/>
+          <!-- Unnamed () -->
+          <div id="u488" class="text">
+            <p><span>班级部门:</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u489" class="ax_default table_cell">
+          <img id="u489_img" class="img " src="images/个人信息/u481.png"/>
+          <!-- Unnamed () -->
+          <div id="u490" class="text">
+            <p><span>软件(本)15-2</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u491" class="ax_default table_cell">
+          <img id="u491_img" class="img " src="images/个人信息/u479.png"/>
+          <!-- Unnamed () -->
+          <div id="u492" class="text">
+            <p><span>GItHub账号:</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u493" class="ax_default table_cell">
+          <img id="u493_img" class="img " src="images/个人信息/u481.png"/>
+          <!-- Unnamed () -->
+          <div id="u494" class="text">
+            <p><span>wuhengqiang100</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u495" class="ax_default table_cell">
+          <img id="u495_img" class="img " src="images/个人信息/u495.png"/>
+          <!-- Unnamed () -->
+          <div id="u496" class="text">
+            <p><span>类型:</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (单元格) -->
+        <div id="u497" class="ax_default table_cell">
+          <img id="u497_img" class="img " src="images/个人信息/u497.png"/>
+          <!-- Unnamed () -->
+          <div id="u498" class="text">
             <p><span>学生</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u483" class="ax_default box_1">
-        <div id="u483_div" class=""></div>
+      <div id="u499" class="ax_default box_1">
+        <div id="u499_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u484" class="text">
+        <div id="u500" class="text">
           <p><span>用户信息</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u485" class="ax_default primary_button">
-        <div id="u485_div" class=""></div>
+      <div id="u501" class="ax_default primary_button">
+        <div id="u501_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u486" class="text">
+        <div id="u502" class="text">
           <p><span>修改</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u487" class="ax_default primary_button">
-        <div id="u487_div" class=""></div>
+      <div id="u503" class="ax_default primary_button">
+        <div id="u503_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u488" class="text">
+        <div id="u504" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u489" class="ax_default label">
-        <div id="u489_div" class=""></div>
+      <div id="u505" class="ax_default label">
+        <div id="u505_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u490" class="text">
+        <div id="u506" class="text">
           <p><span>个人信息用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u491" class="ax_default label">
-        <div id="u491_div" class=""></div>
+      <div id="u507" class="ax_default label">
+        <div id="u507_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u492" class="text">
+        <div id="u508" class="text">
           <p><span>可编辑文本框</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u493" class="ax_default line">
-        <img id="u493_img" class="img " src="images/个人信息/u493.png"/>
+      <div id="u509" class="ax_default line">
+        <img id="u509_img" class="img " src="images/个人信息/u509.png"/>
         <!-- Unnamed () -->
-        <div id="u494" class="text" style="display:none; visibility: hidden">
+        <div id="u510" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u495" class="ax_default line">
-        <img id="u495_img" class="img " src="images/login/u26.png"/>
+      <div id="u511" class="ax_default line">
+        <img id="u511_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u496" class="text" style="display:none; visibility: hidden">
+        <div id="u512" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u497" class="ax_default">
-        <img id="u497_menu" class="img " src="images/index/u64_menu.png" alt="u497_menu"/>
+      <div id="u513" class="ax_default">
+        <img id="u513_menu" class="img " src="images/index/u64_menu.png" alt="u513_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u498" class="ax_default">
+        <div id="u514" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u499" class="ax_default menu_item">
-            <img id="u499_img" class="img " src="images/index/u62.png"/>
+          <div id="u515" class="ax_default menu_item">
+            <img id="u515_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u500" class="text">
+            <div id="u516" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u501" class="ax_default sub_menu">
-          <img id="u501_menu" class="img " src="images/index/u68_menu.png" alt="u501_menu"/>
+        <div id="u517" class="ax_default sub_menu">
+          <img id="u517_menu" class="img " src="images/index/u68_menu.png" alt="u517_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u502" class="ax_default">
+          <div id="u518" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u503" class="ax_default menu_item">
-              <img id="u503_img" class="img " src="images/index/u70.png"/>
+            <div id="u519" class="ax_default menu_item">
+              <img id="u519_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u504" class="text">
+              <div id="u520" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u505" class="ax_default menu_item">
-              <img id="u505_img" class="img " src="images/index/u62.png"/>
+            <div id="u521" class="ax_default menu_item">
+              <img id="u521_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u506" class="text">
+              <div id="u522" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u523" class="ax_default line">
+        <img id="u523_img" class="img " src="images/学生列表/u450.png"/>
+        <!-- Unnamed () -->
+        <div id="u524" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u525" class="ax_default label">
+        <div id="u525_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u526" class="text">
+          <p><span style="color:#00CC00;">个人信息用例图 接口:</span><a id="u527" class="link"><span style="color:#0000FF;">setUserInfo</span></a></p>
         </div>
       </div>
     </div>
