--- a/test6/ui/修改密码.html
+++ b/test6/ui/修改密码.html
@@ -25,102 +25,7 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u507" class="ax_default box_1">
-        <div id="u507_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u508" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u509" class="ax_default box_1">
-        <img id="u509_img" class="img " src="images/index/u30.png"/>
-        <!-- Unnamed () -->
-        <div id="u510" class="text">
-          <p><span>信息系统分析设计</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (内联框架) -->
-      <div id="u511" class="ax_default">
-        <iframe id="u511_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      </div>
-
-      <!-- Unnamed (菜单) -->
-      <div id="u512" class="ax_default">
-        <img id="u512_menu" class="img " src="images/index/u33_menu.png" alt="u512_menu"/>
-
-        <!-- Unnamed (表格) -->
-        <div id="u513" class="ax_default">
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u514" class="ax_default menu_item">
-            <img id="u514_img" class="img " src="images/index/u35.png"/>
-            <!-- Unnamed () -->
-            <div id="u515" class="text">
-              <p><span>首页</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u516" class="ax_default menu_item">
-            <img id="u516_img" class="img " src="images/index/u37.png"/>
-            <!-- Unnamed () -->
-            <div id="u517" class="text">
-              <p><span>查看成绩</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u518" class="ax_default menu_item">
-            <img id="u518_img" class="img " src="images/index/u39.png"/>
-            <!-- Unnamed () -->
-            <div id="u519" class="text">
-              <p><span>学生列表</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u520" class="ax_default menu_item">
-            <img id="u520_img" class="img " src="images/index/u41.png"/>
-            <!-- Unnamed () -->
-            <div id="u521" class="text">
-              <p><span>个人信息</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u522" class="ax_default menu_item">
-            <img id="u522_img" class="img " src="images/index/u43.png"/>
-            <!-- Unnamed () -->
-            <div id="u523" class="text">
-              <p><span>修改密码</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u524" class="ax_default menu_item">
-            <img id="u524_img" class="img " src="images/index/u45.png"/>
-            <!-- Unnamed () -->
-            <div id="u525" class="text">
-              <p><span>安全退出</span></p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (正水滴形) -->
-      <div id="u526" class="ax_default marker">
-        <img id="u526_img" class="img " src="images/login/u4.png"/>
-        <!-- Unnamed () -->
-        <div id="u527" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u528" class="ax_default box_3">
+      <div id="u528" class="ax_default box_1">
         <div id="u528_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u529" class="text" style="display:none; visibility: hidden">
@@ -128,175 +33,270 @@
         </div>
       </div>
 
-      <!-- Unnamed (椭圆形) -->
-      <div id="u530" class="ax_default ellipse">
-        <img id="u530_img" class="img " src="images/修改密码/u530.png"/>
+      <!-- Unnamed (矩形) -->
+      <div id="u530" class="ax_default box_1">
+        <img id="u530_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u531" class="text" style="display:none; visibility: hidden">
+        <div id="u531" class="text">
+          <p><span>信息系统分析设计</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (内联框架) -->
+      <div id="u532" class="ax_default">
+        <iframe id="u532_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+
+      <!-- Unnamed (菜单) -->
+      <div id="u533" class="ax_default">
+        <img id="u533_menu" class="img " src="images/index/u33_menu.png" alt="u533_menu"/>
+
+        <!-- Unnamed (表格) -->
+        <div id="u534" class="ax_default">
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u535" class="ax_default menu_item">
+            <img id="u535_img" class="img " src="images/index/u35.png"/>
+            <!-- Unnamed () -->
+            <div id="u536" class="text">
+              <p><span>首页</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u537" class="ax_default menu_item">
+            <img id="u537_img" class="img " src="images/index/u37.png"/>
+            <!-- Unnamed () -->
+            <div id="u538" class="text">
+              <p><span>查看成绩</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u539" class="ax_default menu_item">
+            <img id="u539_img" class="img " src="images/index/u39.png"/>
+            <!-- Unnamed () -->
+            <div id="u540" class="text">
+              <p><span>学生列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u541" class="ax_default menu_item">
+            <img id="u541_img" class="img " src="images/index/u41.png"/>
+            <!-- Unnamed () -->
+            <div id="u542" class="text">
+              <p><span>个人信息</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u543" class="ax_default menu_item">
+            <img id="u543_img" class="img " src="images/index/u43.png"/>
+            <!-- Unnamed () -->
+            <div id="u544" class="text">
+              <p><span>修改密码</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u545" class="ax_default menu_item">
+            <img id="u545_img" class="img " src="images/index/u45.png"/>
+            <!-- Unnamed () -->
+            <div id="u546" class="text">
+              <p><span>安全退出</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (正水滴形) -->
+      <div id="u547" class="ax_default marker">
+        <img id="u547_img" class="img " src="images/login/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u548" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u549" class="ax_default box_3">
+        <div id="u549_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u550" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (椭圆形) -->
+      <div id="u551" class="ax_default ellipse">
+        <img id="u551_img" class="img " src="images/修改密码/u551.png"/>
+        <!-- Unnamed () -->
+        <div id="u552" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u532" class="ax_default">
+      <div id="u553" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u533" class="ax_default table_cell">
-          <img id="u533_img" class="img " src="images/修改密码/u533.png"/>
+        <div id="u554" class="ax_default table_cell">
+          <img id="u554_img" class="img " src="images/修改密码/u554.png"/>
           <!-- Unnamed () -->
-          <div id="u534" class="text">
+          <div id="u555" class="text">
             <p><span>学号/工号:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u535" class="ax_default table_cell">
-          <img id="u535_img" class="img " src="images/修改密码/u535.png"/>
+        <div id="u556" class="ax_default table_cell">
+          <img id="u556_img" class="img " src="images/修改密码/u556.png"/>
           <!-- Unnamed () -->
-          <div id="u536" class="text">
+          <div id="u557" class="text">
             <p><span>201510414220</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u537" class="ax_default table_cell">
-          <img id="u537_img" class="img " src="images/修改密码/u537.png"/>
+        <div id="u558" class="ax_default table_cell">
+          <img id="u558_img" class="img " src="images/修改密码/u558.png"/>
           <!-- Unnamed () -->
-          <div id="u538" class="text">
+          <div id="u559" class="text">
             <p><span>姓名:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u539" class="ax_default table_cell">
-          <img id="u539_img" class="img " src="images/修改密码/u539.png"/>
+        <div id="u560" class="ax_default table_cell">
+          <img id="u560_img" class="img " src="images/修改密码/u560.png"/>
           <!-- Unnamed () -->
-          <div id="u540" class="text">
+          <div id="u561" class="text">
             <p><span>巫恒强</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u541" class="ax_default box_1">
-        <div id="u541_div" class=""></div>
+      <div id="u562" class="ax_default box_1">
+        <div id="u562_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u542" class="text">
+        <div id="u563" class="text">
           <p><span>修改密码</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u543" class="ax_default text_field">
-        <input id="u543_input" type="text" value=""/>
+      <div id="u564" class="ax_default text_field">
+        <input id="u564_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u544" class="ax_default label">
-        <div id="u544_div" class=""></div>
+      <div id="u565" class="ax_default label">
+        <div id="u565_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u545" class="text">
+        <div id="u566" class="text">
           <p><span>输入密码:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u546" class="ax_default label">
-        <div id="u546_div" class=""></div>
+      <div id="u567" class="ax_default label">
+        <div id="u567_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u547" class="text">
+        <div id="u568" class="text">
           <p><span>确认密码:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u548" class="ax_default text_field">
-        <input id="u548_input" type="text" value=""/>
+      <div id="u569" class="ax_default text_field">
+        <input id="u569_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u549" class="ax_default primary_button">
-        <div id="u549_div" class=""></div>
+      <div id="u570" class="ax_default primary_button">
+        <div id="u570_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u550" class="text">
+        <div id="u571" class="text">
           <p><span>提交</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u551" class="ax_default primary_button">
-        <div id="u551_div" class=""></div>
+      <div id="u572" class="ax_default primary_button">
+        <div id="u572_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u552" class="text">
+        <div id="u573" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u553" class="ax_default label">
-        <div id="u553_div" class=""></div>
+      <div id="u574" class="ax_default label">
+        <div id="u574_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u554" class="text">
+        <div id="u575" class="text">
           <p><span>修改密码用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u555" class="ax_default label">
-        <div id="u555_div" class=""></div>
+      <div id="u576" class="ax_default label">
+        <div id="u576_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u556" class="text">
+        <div id="u577" class="text">
           <p><span>验证文本框</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u557" class="ax_default line">
-        <img id="u557_img" class="img " src="images/个人信息/u493.png"/>
+      <div id="u578" class="ax_default line">
+        <img id="u578_img" class="img " src="images/个人信息/u509.png"/>
         <!-- Unnamed () -->
-        <div id="u558" class="text" style="display:none; visibility: hidden">
+        <div id="u579" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u559" class="ax_default">
-        <img id="u559_menu" class="img " src="images/index/u64_menu.png" alt="u559_menu"/>
+      <div id="u580" class="ax_default">
+        <img id="u580_menu" class="img " src="images/index/u64_menu.png" alt="u580_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u560" class="ax_default">
+        <div id="u581" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u561" class="ax_default menu_item">
-            <img id="u561_img" class="img " src="images/index/u62.png"/>
+          <div id="u582" class="ax_default menu_item">
+            <img id="u582_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u562" class="text">
+            <div id="u583" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u563" class="ax_default sub_menu">
-          <img id="u563_menu" class="img " src="images/index/u68_menu.png" alt="u563_menu"/>
+        <div id="u584" class="ax_default sub_menu">
+          <img id="u584_menu" class="img " src="images/index/u68_menu.png" alt="u584_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u564" class="ax_default">
+          <div id="u585" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u565" class="ax_default menu_item">
-              <img id="u565_img" class="img " src="images/index/u70.png"/>
+            <div id="u586" class="ax_default menu_item">
+              <img id="u586_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u566" class="text">
+              <div id="u587" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u567" class="ax_default menu_item">
-              <img id="u567_img" class="img " src="images/index/u62.png"/>
+            <div id="u588" class="ax_default menu_item">
+              <img id="u588_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u568" class="text">
+              <div id="u589" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -305,11 +305,29 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u569" class="ax_default line">
-        <img id="u569_img" class="img " src="images/login/u26.png"/>
+      <div id="u590" class="ax_default line">
+        <img id="u590_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u570" class="text" style="display:none; visibility: hidden">
+        <div id="u591" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u592" class="ax_default line">
+        <img id="u592_img" class="img " src="images/学生列表/u450.png"/>
+        <!-- Unnamed () -->
+        <div id="u593" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u594" class="ax_default label">
+        <div id="u594_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u595" class="text">
+          <p><span style="color:#00CC00;">修改密码用例图 接口:</span><a id="u596" class="link"><span style="color:#0000FF;">setPassword</span></a></p>
         </div>
       </div>
     </div>
