--- a/test6/ui/安全退出.html
+++ b/test6/ui/安全退出.html
@@ -25,85 +25,85 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u571" class="ax_default box_1">
-        <div id="u571_div" class=""></div>
+      <div id="u597" class="ax_default box_1">
+        <div id="u597_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u572" class="text" style="display:none; visibility: hidden">
+        <div id="u598" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u573" class="ax_default box_1">
-        <img id="u573_img" class="img " src="images/index/u30.png"/>
+      <div id="u599" class="ax_default box_1">
+        <img id="u599_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u574" class="text">
+        <div id="u600" class="text">
           <p><span>信息系统分析设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (内联框架) -->
-      <div id="u575" class="ax_default">
-        <iframe id="u575_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u601" class="ax_default">
+        <iframe id="u601_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u576" class="ax_default">
-        <img id="u576_menu" class="img " src="images/index/u33_menu.png" alt="u576_menu"/>
+      <div id="u602" class="ax_default">
+        <img id="u602_menu" class="img " src="images/index/u33_menu.png" alt="u602_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u577" class="ax_default">
+        <div id="u603" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u578" class="ax_default menu_item">
-            <img id="u578_img" class="img " src="images/index/u35.png"/>
+          <div id="u604" class="ax_default menu_item">
+            <img id="u604_img" class="img " src="images/index/u35.png"/>
             <!-- Unnamed () -->
-            <div id="u579" class="text">
+            <div id="u605" class="text">
               <p><span>首页</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u580" class="ax_default menu_item">
-            <img id="u580_img" class="img " src="images/index/u37.png"/>
+          <div id="u606" class="ax_default menu_item">
+            <img id="u606_img" class="img " src="images/index/u37.png"/>
             <!-- Unnamed () -->
-            <div id="u581" class="text">
+            <div id="u607" class="text">
               <p><span>查看成绩</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u582" class="ax_default menu_item">
-            <img id="u582_img" class="img " src="images/index/u39.png"/>
+          <div id="u608" class="ax_default menu_item">
+            <img id="u608_img" class="img " src="images/index/u39.png"/>
             <!-- Unnamed () -->
-            <div id="u583" class="text">
+            <div id="u609" class="text">
               <p><span>学生列表</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u584" class="ax_default menu_item">
-            <img id="u584_img" class="img " src="images/index/u41.png"/>
+          <div id="u610" class="ax_default menu_item">
+            <img id="u610_img" class="img " src="images/index/u41.png"/>
             <!-- Unnamed () -->
-            <div id="u585" class="text">
+            <div id="u611" class="text">
               <p><span>个人信息</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u586" class="ax_default menu_item">
-            <img id="u586_img" class="img " src="images/index/u43.png"/>
+          <div id="u612" class="ax_default menu_item">
+            <img id="u612_img" class="img " src="images/index/u43.png"/>
             <!-- Unnamed () -->
-            <div id="u587" class="text">
+            <div id="u613" class="text">
               <p><span>修改密码</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u588" class="ax_default menu_item">
-            <img id="u588_img" class="img " src="images/index/u45.png"/>
+          <div id="u614" class="ax_default menu_item">
+            <img id="u614_img" class="img " src="images/index/u45.png"/>
             <!-- Unnamed () -->
-            <div id="u589" class="text">
+            <div id="u615" class="text">
               <p><span>安全退出</span></p>
             </div>
           </div>
@@ -111,115 +111,115 @@
       </div>
 
       <!-- Unnamed (正水滴形) -->
-      <div id="u590" class="ax_default marker">
-        <img id="u590_img" class="img " src="images/login/u4.png"/>
+      <div id="u616" class="ax_default marker">
+        <img id="u616_img" class="img " src="images/login/u4.png"/>
         <!-- Unnamed () -->
-        <div id="u591" class="text" style="display:none; visibility: hidden">
+        <div id="u617" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u592" class="ax_default box_3">
-        <div id="u592_div" class=""></div>
+      <div id="u618" class="ax_default box_3">
+        <div id="u618_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u593" class="text" style="display:none; visibility: hidden">
+        <div id="u619" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (椭圆形) -->
-      <div id="u594" class="ax_default ellipse">
-        <img id="u594_img" class="img " src="images/安全退出/u594.png"/>
+      <div id="u620" class="ax_default ellipse">
+        <img id="u620_img" class="img " src="images/安全退出/u620.png"/>
         <!-- Unnamed () -->
-        <div id="u595" class="text" style="display:none; visibility: hidden">
+        <div id="u621" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u596" class="ax_default box_1">
-        <div id="u596_div" class=""></div>
+      <div id="u622" class="ax_default box_1">
+        <div id="u622_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u597" class="text">
+        <div id="u623" class="text">
           <p><span>系统提示</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u598" class="ax_default primary_button">
-        <div id="u598_div" class=""></div>
+      <div id="u624" class="ax_default primary_button">
+        <div id="u624_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u599" class="text">
+        <div id="u625" class="text">
           <p><span>确认</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u600" class="ax_default primary_button">
-        <div id="u600_div" class=""></div>
+      <div id="u626" class="ax_default primary_button">
+        <div id="u626_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u601" class="text">
+        <div id="u627" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u602" class="ax_default label">
-        <div id="u602_div" class=""></div>
+      <div id="u628" class="ax_default label">
+        <div id="u628_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u603" class="text">
+        <div id="u629" class="text">
           <p><span>确认要退出吗?</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u604" class="ax_default label">
-        <div id="u604_div" class=""></div>
+      <div id="u630" class="ax_default label">
+        <div id="u630_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u605" class="text">
+        <div id="u631" class="text">
           <p><span>安全退出用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u606" class="ax_default">
-        <img id="u606_menu" class="img " src="images/index/u64_menu.png" alt="u606_menu"/>
+      <div id="u632" class="ax_default">
+        <img id="u632_menu" class="img " src="images/安全退出/u632_menu.png" alt="u632_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u607" class="ax_default">
+        <div id="u633" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u608" class="ax_default menu_item">
-            <img id="u608_img" class="img " src="images/index/u62.png"/>
+          <div id="u634" class="ax_default menu_item">
+            <img id="u634_img" class="img " src="images/安全退出/u634.png"/>
             <!-- Unnamed () -->
-            <div id="u609" class="text">
+            <div id="u635" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u610" class="ax_default sub_menu">
-          <img id="u610_menu" class="img " src="images/index/u68_menu.png" alt="u610_menu"/>
+        <div id="u636" class="ax_default sub_menu">
+          <img id="u636_menu" class="img " src="images/index/u68_menu.png" alt="u636_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u611" class="ax_default">
+          <div id="u637" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u612" class="ax_default menu_item">
-              <img id="u612_img" class="img " src="images/index/u70.png"/>
+            <div id="u638" class="ax_default menu_item">
+              <img id="u638_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u613" class="text">
+              <div id="u639" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u614" class="ax_default menu_item">
-              <img id="u614_img" class="img " src="images/index/u62.png"/>
+            <div id="u640" class="ax_default menu_item">
+              <img id="u640_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u615" class="text">
+              <div id="u641" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -228,11 +228,29 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u616" class="ax_default line">
-        <img id="u616_img" class="img " src="images/login/u26.png"/>
+      <div id="u642" class="ax_default line">
+        <img id="u642_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u617" class="text" style="display:none; visibility: hidden">
+        <div id="u643" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u644" class="ax_default line">
+        <img id="u644_img" class="img " src="images/评定成绩/u215.png"/>
+        <!-- Unnamed () -->
+        <div id="u645" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u646" class="ax_default label">
+        <div id="u646_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u647" class="text">
+          <p><span style="color:#00CC00;">安全退出 接口:</span><a id="u648" class="link"><span style="color:#0000FF;">login</span></a><span style="color:#00CC00;">out</span></p>
         </div>
       </div>
     </div>
