--- a/test6/ui/安全退出.html
+++ b/test6/ui/安全退出.html
@@ -25,85 +25,85 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u597" class="ax_default box_1">
-        <div id="u597_div" class=""></div>
+      <div id="u622" class="ax_default box_1">
+        <div id="u622_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u598" class="text" style="display:none; visibility: hidden">
+        <div id="u623" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u599" class="ax_default box_1">
-        <img id="u599_img" class="img " src="images/index/u30.png"/>
+      <div id="u624" class="ax_default box_1">
+        <img id="u624_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u600" class="text">
+        <div id="u625" class="text">
           <p><span>信息系统分析设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (内联框架) -->
-      <div id="u601" class="ax_default">
-        <iframe id="u601_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u626" class="ax_default">
+        <iframe id="u626_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u602" class="ax_default">
-        <img id="u602_menu" class="img " src="images/index/u33_menu.png" alt="u602_menu"/>
+      <div id="u627" class="ax_default">
+        <img id="u627_menu" class="img " src="images/index/u33_menu.png" alt="u627_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u603" class="ax_default">
+        <div id="u628" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u604" class="ax_default menu_item">
-            <img id="u604_img" class="img " src="images/index/u35.png"/>
+          <div id="u629" class="ax_default menu_item">
+            <img id="u629_img" class="img " src="images/index/u35.png"/>
             <!-- Unnamed () -->
-            <div id="u605" class="text">
+            <div id="u630" class="text">
               <p><span>首页</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u606" class="ax_default menu_item">
-            <img id="u606_img" class="img " src="images/index/u37.png"/>
+          <div id="u631" class="ax_default menu_item">
+            <img id="u631_img" class="img " src="images/index/u37.png"/>
             <!-- Unnamed () -->
-            <div id="u607" class="text">
+            <div id="u632" class="text">
               <p><span>查看成绩</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u608" class="ax_default menu_item">
-            <img id="u608_img" class="img " src="images/index/u39.png"/>
+          <div id="u633" class="ax_default menu_item">
+            <img id="u633_img" class="img " src="images/index/u39.png"/>
             <!-- Unnamed () -->
-            <div id="u609" class="text">
+            <div id="u634" class="text">
               <p><span>学生列表</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u610" class="ax_default menu_item">
-            <img id="u610_img" class="img " src="images/index/u41.png"/>
+          <div id="u635" class="ax_default menu_item">
+            <img id="u635_img" class="img " src="images/index/u41.png"/>
             <!-- Unnamed () -->
-            <div id="u611" class="text">
+            <div id="u636" class="text">
               <p><span>个人信息</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u612" class="ax_default menu_item">
-            <img id="u612_img" class="img " src="images/index/u43.png"/>
+          <div id="u637" class="ax_default menu_item">
+            <img id="u637_img" class="img " src="images/index/u43.png"/>
             <!-- Unnamed () -->
-            <div id="u613" class="text">
+            <div id="u638" class="text">
               <p><span>修改密码</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u614" class="ax_default menu_item">
-            <img id="u614_img" class="img " src="images/index/u45.png"/>
+          <div id="u639" class="ax_default menu_item">
+            <img id="u639_img" class="img " src="images/index/u45.png"/>
             <!-- Unnamed () -->
-            <div id="u615" class="text">
+            <div id="u640" class="text">
               <p><span>安全退出</span></p>
             </div>
           </div>
@@ -111,146 +111,164 @@
       </div>
 
       <!-- Unnamed (正水滴形) -->
-      <div id="u616" class="ax_default marker">
-        <img id="u616_img" class="img " src="images/login/u4.png"/>
+      <div id="u641" class="ax_default marker">
+        <img id="u641_img" class="img " src="images/login/u4.png"/>
         <!-- Unnamed () -->
-        <div id="u617" class="text" style="display:none; visibility: hidden">
+        <div id="u642" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u618" class="ax_default box_3">
-        <div id="u618_div" class=""></div>
+      <div id="u643" class="ax_default box_3">
+        <div id="u643_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u619" class="text" style="display:none; visibility: hidden">
+        <div id="u644" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (椭圆形) -->
-      <div id="u620" class="ax_default ellipse">
-        <img id="u620_img" class="img " src="images/安全退出/u620.png"/>
+      <div id="u645" class="ax_default ellipse">
+        <img id="u645_img" class="img " src="images/安全退出/u645.png"/>
         <!-- Unnamed () -->
-        <div id="u621" class="text" style="display:none; visibility: hidden">
+        <div id="u646" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u622" class="ax_default box_1">
-        <div id="u622_div" class=""></div>
+      <div id="u647" class="ax_default box_1">
+        <div id="u647_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u623" class="text">
+        <div id="u648" class="text">
           <p><span>系统提示</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u624" class="ax_default primary_button">
-        <div id="u624_div" class=""></div>
+      <div id="u649" class="ax_default primary_button">
+        <div id="u649_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u625" class="text">
+        <div id="u650" class="text">
           <p><span>确认</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u626" class="ax_default primary_button">
-        <div id="u626_div" class=""></div>
+      <div id="u651" class="ax_default primary_button">
+        <div id="u651_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u627" class="text">
+        <div id="u652" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u628" class="ax_default label">
-        <div id="u628_div" class=""></div>
+      <div id="u653" class="ax_default label">
+        <div id="u653_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u629" class="text">
+        <div id="u654" class="text">
           <p><span>确认要退出吗?</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u630" class="ax_default label">
-        <div id="u630_div" class=""></div>
+      <div id="u655" class="ax_default label">
+        <div id="u655_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u631" class="text">
+        <div id="u656" class="text">
           <p><span>安全退出用例图</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (菜单) -->
-      <div id="u632" class="ax_default">
-        <img id="u632_menu" class="img " src="images/安全退出/u632_menu.png" alt="u632_menu"/>
-
-        <!-- Unnamed (表格) -->
-        <div id="u633" class="ax_default">
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u634" class="ax_default menu_item">
-            <img id="u634_img" class="img " src="images/安全退出/u634.png"/>
-            <!-- Unnamed () -->
-            <div id="u635" class="text">
-              <p><span>巫恒强</span></p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Unnamed (菜单) -->
-        <div id="u636" class="ax_default sub_menu">
-          <img id="u636_menu" class="img " src="images/index/u68_menu.png" alt="u636_menu"/>
-
-          <!-- Unnamed (表格) -->
-          <div id="u637" class="ax_default">
-
-            <!-- Unnamed (Menu Item) -->
-            <div id="u638" class="ax_default menu_item">
-              <img id="u638_img" class="img " src="images/index/u70.png"/>
-              <!-- Unnamed () -->
-              <div id="u639" class="text">
-                <p><span>个人信息</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Menu Item) -->
-            <div id="u640" class="ax_default menu_item">
-              <img id="u640_img" class="img " src="images/index/u62.png"/>
-              <!-- Unnamed () -->
-              <div id="u641" class="text">
-                <p><span>安全退出</span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Unnamed (水平线) -->
-      <div id="u642" class="ax_default line">
-        <img id="u642_img" class="img " src="images/login/u26.png"/>
+      <div id="u657" class="ax_default line">
+        <img id="u657_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u643" class="text" style="display:none; visibility: hidden">
+        <div id="u658" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u644" class="ax_default line">
-        <img id="u644_img" class="img " src="images/评定成绩/u215.png"/>
+      <div id="u659" class="ax_default line">
+        <img id="u659_img" class="img " src="images/评定成绩/u213.png"/>
         <!-- Unnamed () -->
-        <div id="u645" class="text" style="display:none; visibility: hidden">
+        <div id="u660" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u646" class="ax_default label">
-        <div id="u646_div" class=""></div>
+      <div id="u661" class="ax_default label">
+        <div id="u661_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u647" class="text">
-          <p><span style="color:#00CC00;">安全退出 接口:</span><a id="u648" class="link"><span style="color:#0000FF;">login</span></a><span style="color:#00CC00;">out</span></p>
+        <div id="u662" class="text">
+          <p><span style="color:#00CC00;">安全退出 接口:</span><a id="u663" class="link"><span style="color:#0000FF;">loginout</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u664" class="ax_default link_button">
+        <div id="u664_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u665" class="text">
+          <p><span>评定成绩</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u666" class="ax_default label">
+        <div id="u666_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u667" class="text">
+          <p><span>老师评定成绩链接</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u668" class="ax_default line">
+        <img id="u668_img" class="img " src="images/index/u82.png"/>
+        <!-- Unnamed () -->
+        <div id="u669" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (菜单) -->
+      <div id="u670" class="ax_default">
+        <img id="u670_menu" class="img " src="images/安全退出/u670_menu.png" alt="u670_menu"/>
+
+        <!-- Unnamed (表格) -->
+        <div id="u671" class="ax_default">
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u672" class="ax_default menu_item">
+            <img id="u672_img" class="img " src="images/index/u70.png"/>
+            <!-- Unnamed () -->
+            <div id="u673" class="text">
+              <p><span>巫恒强</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u674" class="ax_default menu_item">
+            <img id="u674_img" class="img " src="images/index/u70.png"/>
+            <!-- Unnamed () -->
+            <div id="u675" class="text">
+              <p><span>个人信息</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u676" class="ax_default menu_item">
+            <img id="u676_img" class="img " src="images/index/u62.png"/>
+            <!-- Unnamed () -->
+            <div id="u677" class="text">
+              <p><span>安全退出</span></p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
