--- a/test6/ui/个人信息.html
+++ b/test6/ui/个人信息.html
@@ -25,85 +25,85 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u455" class="ax_default box_1">
-        <div id="u455_div" class=""></div>
+      <div id="u468" class="ax_default box_1">
+        <div id="u468_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u456" class="text" style="display:none; visibility: hidden">
+        <div id="u469" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u457" class="ax_default box_1">
-        <img id="u457_img" class="img " src="images/index/u30.png"/>
+      <div id="u470" class="ax_default box_1">
+        <img id="u470_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u458" class="text">
+        <div id="u471" class="text">
           <p><span>信息系统分析设计</span></p>
         </div>
       </div>
 
       <!-- Unnamed (内联框架) -->
-      <div id="u459" class="ax_default">
-        <iframe id="u459_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u472" class="ax_default">
+        <iframe id="u472_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u460" class="ax_default">
-        <img id="u460_menu" class="img " src="images/index/u33_menu.png" alt="u460_menu"/>
+      <div id="u473" class="ax_default">
+        <img id="u473_menu" class="img " src="images/index/u33_menu.png" alt="u473_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u461" class="ax_default">
+        <div id="u474" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u462" class="ax_default menu_item">
-            <img id="u462_img" class="img " src="images/index/u35.png"/>
+          <div id="u475" class="ax_default menu_item">
+            <img id="u475_img" class="img " src="images/index/u35.png"/>
             <!-- Unnamed () -->
-            <div id="u463" class="text">
+            <div id="u476" class="text">
               <p><span>首页</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u464" class="ax_default menu_item">
-            <img id="u464_img" class="img " src="images/index/u37.png"/>
+          <div id="u477" class="ax_default menu_item">
+            <img id="u477_img" class="img " src="images/index/u37.png"/>
             <!-- Unnamed () -->
-            <div id="u465" class="text">
+            <div id="u478" class="text">
               <p><span>查看成绩</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u466" class="ax_default menu_item">
-            <img id="u466_img" class="img " src="images/index/u39.png"/>
+          <div id="u479" class="ax_default menu_item">
+            <img id="u479_img" class="img " src="images/index/u39.png"/>
             <!-- Unnamed () -->
-            <div id="u467" class="text">
+            <div id="u480" class="text">
               <p><span>学生列表</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u468" class="ax_default menu_item">
-            <img id="u468_img" class="img " src="images/index/u41.png"/>
+          <div id="u481" class="ax_default menu_item">
+            <img id="u481_img" class="img " src="images/index/u41.png"/>
             <!-- Unnamed () -->
-            <div id="u469" class="text">
+            <div id="u482" class="text">
               <p><span>个人信息</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u470" class="ax_default menu_item">
-            <img id="u470_img" class="img " src="images/index/u43.png"/>
+          <div id="u483" class="ax_default menu_item">
+            <img id="u483_img" class="img " src="images/index/u43.png"/>
             <!-- Unnamed () -->
-            <div id="u471" class="text">
+            <div id="u484" class="text">
               <p><span>修改密码</span></p>
             </div>
           </div>
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u472" class="ax_default menu_item">
-            <img id="u472_img" class="img " src="images/index/u45.png"/>
+          <div id="u485" class="ax_default menu_item">
+            <img id="u485_img" class="img " src="images/index/u45.png"/>
             <!-- Unnamed () -->
-            <div id="u473" class="text">
+            <div id="u486" class="text">
               <p><span>安全退出</span></p>
             </div>
           </div>
@@ -111,218 +111,218 @@
       </div>
 
       <!-- Unnamed (正水滴形) -->
-      <div id="u474" class="ax_default marker">
-        <img id="u474_img" class="img " src="images/login/u4.png"/>
+      <div id="u487" class="ax_default marker">
+        <img id="u487_img" class="img " src="images/login/u4.png"/>
         <!-- Unnamed () -->
-        <div id="u475" class="text" style="display:none; visibility: hidden">
+        <div id="u488" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u476" class="ax_default box_3">
-        <div id="u476_div" class=""></div>
+      <div id="u489" class="ax_default box_3">
+        <div id="u489_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u477" class="text" style="display:none; visibility: hidden">
+        <div id="u490" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u478" class="ax_default">
+      <div id="u491" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u479" class="ax_default table_cell">
-          <img id="u479_img" class="img " src="images/个人信息/u479.png"/>
+        <div id="u492" class="ax_default table_cell">
+          <img id="u492_img" class="img " src="images/个人信息/u492.png"/>
           <!-- Unnamed () -->
-          <div id="u480" class="text">
+          <div id="u493" class="text">
             <p><span>学号/工号:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u481" class="ax_default table_cell">
-          <img id="u481_img" class="img " src="images/个人信息/u481.png"/>
+        <div id="u494" class="ax_default table_cell">
+          <img id="u494_img" class="img " src="images/个人信息/u494.png"/>
           <!-- Unnamed () -->
-          <div id="u482" class="text">
+          <div id="u495" class="text">
             <p><span>201510414220</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u483" class="ax_default table_cell">
-          <img id="u483_img" class="img " src="images/个人信息/u479.png"/>
+        <div id="u496" class="ax_default table_cell">
+          <img id="u496_img" class="img " src="images/个人信息/u492.png"/>
           <!-- Unnamed () -->
-          <div id="u484" class="text">
+          <div id="u497" class="text">
             <p><span>姓名:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u485" class="ax_default table_cell">
-          <img id="u485_img" class="img " src="images/个人信息/u481.png"/>
+        <div id="u498" class="ax_default table_cell">
+          <img id="u498_img" class="img " src="images/个人信息/u494.png"/>
           <!-- Unnamed () -->
-          <div id="u486" class="text">
+          <div id="u499" class="text">
             <p><span>巫恒强</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u487" class="ax_default table_cell">
-          <img id="u487_img" class="img " src="images/个人信息/u479.png"/>
+        <div id="u500" class="ax_default table_cell">
+          <img id="u500_img" class="img " src="images/个人信息/u492.png"/>
           <!-- Unnamed () -->
-          <div id="u488" class="text">
+          <div id="u501" class="text">
             <p><span>班级部门:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u489" class="ax_default table_cell">
-          <img id="u489_img" class="img " src="images/个人信息/u481.png"/>
+        <div id="u502" class="ax_default table_cell">
+          <img id="u502_img" class="img " src="images/个人信息/u494.png"/>
           <!-- Unnamed () -->
-          <div id="u490" class="text">
+          <div id="u503" class="text">
             <p><span>软件(本)15-2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u491" class="ax_default table_cell">
-          <img id="u491_img" class="img " src="images/个人信息/u479.png"/>
+        <div id="u504" class="ax_default table_cell">
+          <img id="u504_img" class="img " src="images/个人信息/u492.png"/>
           <!-- Unnamed () -->
-          <div id="u492" class="text">
+          <div id="u505" class="text">
             <p><span>GItHub账号:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u493" class="ax_default table_cell">
-          <img id="u493_img" class="img " src="images/个人信息/u481.png"/>
+        <div id="u506" class="ax_default table_cell">
+          <img id="u506_img" class="img " src="images/个人信息/u494.png"/>
           <!-- Unnamed () -->
-          <div id="u494" class="text">
+          <div id="u507" class="text">
             <p><span>wuhengqiang100</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u495" class="ax_default table_cell">
-          <img id="u495_img" class="img " src="images/个人信息/u495.png"/>
+        <div id="u508" class="ax_default table_cell">
+          <img id="u508_img" class="img " src="images/个人信息/u508.png"/>
           <!-- Unnamed () -->
-          <div id="u496" class="text">
+          <div id="u509" class="text">
             <p><span>类型:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u497" class="ax_default table_cell">
-          <img id="u497_img" class="img " src="images/个人信息/u497.png"/>
+        <div id="u510" class="ax_default table_cell">
+          <img id="u510_img" class="img " src="images/个人信息/u510.png"/>
           <!-- Unnamed () -->
-          <div id="u498" class="text">
+          <div id="u511" class="text">
             <p><span>学生</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u499" class="ax_default box_1">
-        <div id="u499_div" class=""></div>
+      <div id="u512" class="ax_default box_1">
+        <div id="u512_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u500" class="text">
+        <div id="u513" class="text">
           <p><span>用户信息</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u501" class="ax_default primary_button">
-        <div id="u501_div" class=""></div>
+      <div id="u514" class="ax_default primary_button">
+        <div id="u514_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u502" class="text">
+        <div id="u515" class="text">
           <p><span>修改</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u503" class="ax_default primary_button">
-        <div id="u503_div" class=""></div>
+      <div id="u516" class="ax_default primary_button">
+        <div id="u516_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u504" class="text">
+        <div id="u517" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u505" class="ax_default label">
-        <div id="u505_div" class=""></div>
+      <div id="u518" class="ax_default label">
+        <div id="u518_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u506" class="text">
+        <div id="u519" class="text">
           <p><span>个人信息用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u507" class="ax_default label">
-        <div id="u507_div" class=""></div>
+      <div id="u520" class="ax_default label">
+        <div id="u520_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u508" class="text">
+        <div id="u521" class="text">
           <p><span>可编辑文本框</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u509" class="ax_default line">
-        <img id="u509_img" class="img " src="images/个人信息/u509.png"/>
+      <div id="u522" class="ax_default line">
+        <img id="u522_img" class="img " src="images/个人信息/u522.png"/>
         <!-- Unnamed () -->
-        <div id="u510" class="text" style="display:none; visibility: hidden">
+        <div id="u523" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u511" class="ax_default line">
-        <img id="u511_img" class="img " src="images/login/u26.png"/>
+      <div id="u524" class="ax_default line">
+        <img id="u524_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u512" class="text" style="display:none; visibility: hidden">
+        <div id="u525" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u513" class="ax_default">
-        <img id="u513_menu" class="img " src="images/index/u64_menu.png" alt="u513_menu"/>
+      <div id="u526" class="ax_default">
+        <img id="u526_menu" class="img " src="images/index/u64_menu.png" alt="u526_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u514" class="ax_default">
+        <div id="u527" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u515" class="ax_default menu_item">
-            <img id="u515_img" class="img " src="images/index/u62.png"/>
+          <div id="u528" class="ax_default menu_item">
+            <img id="u528_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u516" class="text">
+            <div id="u529" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u517" class="ax_default sub_menu">
-          <img id="u517_menu" class="img " src="images/index/u68_menu.png" alt="u517_menu"/>
+        <div id="u530" class="ax_default sub_menu">
+          <img id="u530_menu" class="img " src="images/index/u68_menu.png" alt="u530_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u518" class="ax_default">
+          <div id="u531" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u519" class="ax_default menu_item">
-              <img id="u519_img" class="img " src="images/index/u70.png"/>
+            <div id="u532" class="ax_default menu_item">
+              <img id="u532_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u520" class="text">
+              <div id="u533" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u521" class="ax_default menu_item">
-              <img id="u521_img" class="img " src="images/index/u62.png"/>
+            <div id="u534" class="ax_default menu_item">
+              <img id="u534_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u522" class="text">
+              <div id="u535" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -331,20 +331,47 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u523" class="ax_default line">
-        <img id="u523_img" class="img " src="images/学生列表/u450.png"/>
+      <div id="u536" class="ax_default line">
+        <img id="u536_img" class="img " src="images/学生列表/u457.png"/>
         <!-- Unnamed () -->
-        <div id="u524" class="text" style="display:none; visibility: hidden">
+        <div id="u537" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u525" class="ax_default label">
-        <div id="u525_div" class=""></div>
+      <div id="u538" class="ax_default label">
+        <div id="u538_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u526" class="text">
-          <p><span style="color:#00CC00;">个人信息用例图 接口:</span><a id="u527" class="link"><span style="color:#0000FF;">setUserInfo</span></a></p>
+        <div id="u539" class="text">
+          <p><span style="color:#00CC00;">个人信息用例图 接口:</span><a id="u540" class="link"><span style="color:#0000FF;">setUserInfo</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u541" class="ax_default link_button">
+        <div id="u541_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u542" class="text">
+          <p><span>评定成绩</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u543" class="ax_default label">
+        <div id="u543_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u544" class="text">
+          <p><span>老师评定成绩链接</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u545" class="ax_default line">
+        <img id="u545_img" class="img " src="images/index/u82.png"/>
+        <!-- Unnamed () -->
+        <div id="u546" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
