--- a/test6/ui/修改密码.html
+++ b/test6/ui/修改密码.html
@@ -25,94 +25,8 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u528" class="ax_default box_1">
-        <div id="u528_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u529" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u530" class="ax_default box_1">
-        <img id="u530_img" class="img " src="images/index/u30.png"/>
-        <!-- Unnamed () -->
-        <div id="u531" class="text">
-          <p><span>信息系统分析设计</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (内联框架) -->
-      <div id="u532" class="ax_default">
-        <iframe id="u532_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      </div>
-
-      <!-- Unnamed (菜单) -->
-      <div id="u533" class="ax_default">
-        <img id="u533_menu" class="img " src="images/index/u33_menu.png" alt="u533_menu"/>
-
-        <!-- Unnamed (表格) -->
-        <div id="u534" class="ax_default">
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u535" class="ax_default menu_item">
-            <img id="u535_img" class="img " src="images/index/u35.png"/>
-            <!-- Unnamed () -->
-            <div id="u536" class="text">
-              <p><span>首页</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u537" class="ax_default menu_item">
-            <img id="u537_img" class="img " src="images/index/u37.png"/>
-            <!-- Unnamed () -->
-            <div id="u538" class="text">
-              <p><span>查看成绩</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u539" class="ax_default menu_item">
-            <img id="u539_img" class="img " src="images/index/u39.png"/>
-            <!-- Unnamed () -->
-            <div id="u540" class="text">
-              <p><span>学生列表</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u541" class="ax_default menu_item">
-            <img id="u541_img" class="img " src="images/index/u41.png"/>
-            <!-- Unnamed () -->
-            <div id="u542" class="text">
-              <p><span>个人信息</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u543" class="ax_default menu_item">
-            <img id="u543_img" class="img " src="images/index/u43.png"/>
-            <!-- Unnamed () -->
-            <div id="u544" class="text">
-              <p><span>修改密码</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (Menu Item) -->
-          <div id="u545" class="ax_default menu_item">
-            <img id="u545_img" class="img " src="images/index/u45.png"/>
-            <!-- Unnamed () -->
-            <div id="u546" class="text">
-              <p><span>安全退出</span></p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (正水滴形) -->
-      <div id="u547" class="ax_default marker">
-        <img id="u547_img" class="img " src="images/login/u4.png"/>
+      <div id="u547" class="ax_default box_1">
+        <div id="u547_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u548" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -120,183 +34,269 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u549" class="ax_default box_3">
-        <div id="u549_div" class=""></div>
+      <div id="u549" class="ax_default box_1">
+        <img id="u549_img" class="img " src="images/index/u30.png"/>
         <!-- Unnamed () -->
-        <div id="u550" class="text" style="display:none; visibility: hidden">
+        <div id="u550" class="text">
+          <p><span>信息系统分析设计</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (内联框架) -->
+      <div id="u551" class="ax_default">
+        <iframe id="u551_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+
+      <!-- Unnamed (菜单) -->
+      <div id="u552" class="ax_default">
+        <img id="u552_menu" class="img " src="images/index/u33_menu.png" alt="u552_menu"/>
+
+        <!-- Unnamed (表格) -->
+        <div id="u553" class="ax_default">
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u554" class="ax_default menu_item">
+            <img id="u554_img" class="img " src="images/index/u35.png"/>
+            <!-- Unnamed () -->
+            <div id="u555" class="text">
+              <p><span>首页</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u556" class="ax_default menu_item">
+            <img id="u556_img" class="img " src="images/index/u37.png"/>
+            <!-- Unnamed () -->
+            <div id="u557" class="text">
+              <p><span>查看成绩</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u558" class="ax_default menu_item">
+            <img id="u558_img" class="img " src="images/index/u39.png"/>
+            <!-- Unnamed () -->
+            <div id="u559" class="text">
+              <p><span>学生列表</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u560" class="ax_default menu_item">
+            <img id="u560_img" class="img " src="images/index/u41.png"/>
+            <!-- Unnamed () -->
+            <div id="u561" class="text">
+              <p><span>个人信息</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u562" class="ax_default menu_item">
+            <img id="u562_img" class="img " src="images/index/u43.png"/>
+            <!-- Unnamed () -->
+            <div id="u563" class="text">
+              <p><span>修改密码</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (Menu Item) -->
+          <div id="u564" class="ax_default menu_item">
+            <img id="u564_img" class="img " src="images/index/u45.png"/>
+            <!-- Unnamed () -->
+            <div id="u565" class="text">
+              <p><span>安全退出</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (正水滴形) -->
+      <div id="u566" class="ax_default marker">
+        <img id="u566_img" class="img " src="images/login/u4.png"/>
+        <!-- Unnamed () -->
+        <div id="u567" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u568" class="ax_default box_3">
+        <div id="u568_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u569" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (椭圆形) -->
-      <div id="u551" class="ax_default ellipse">
-        <img id="u551_img" class="img " src="images/修改密码/u551.png"/>
+      <div id="u570" class="ax_default ellipse">
+        <img id="u570_img" class="img " src="images/修改密码/u570.png"/>
         <!-- Unnamed () -->
-        <div id="u552" class="text" style="display:none; visibility: hidden">
+        <div id="u571" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (表格) -->
-      <div id="u553" class="ax_default">
+      <div id="u572" class="ax_default">
 
         <!-- Unnamed (单元格) -->
-        <div id="u554" class="ax_default table_cell">
-          <img id="u554_img" class="img " src="images/修改密码/u554.png"/>
+        <div id="u573" class="ax_default table_cell">
+          <img id="u573_img" class="img " src="images/修改密码/u573.png"/>
           <!-- Unnamed () -->
-          <div id="u555" class="text">
+          <div id="u574" class="text">
             <p><span>学号/工号:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u556" class="ax_default table_cell">
-          <img id="u556_img" class="img " src="images/修改密码/u556.png"/>
+        <div id="u575" class="ax_default table_cell">
+          <img id="u575_img" class="img " src="images/修改密码/u575.png"/>
           <!-- Unnamed () -->
-          <div id="u557" class="text">
+          <div id="u576" class="text">
             <p><span>201510414220</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u558" class="ax_default table_cell">
-          <img id="u558_img" class="img " src="images/修改密码/u558.png"/>
+        <div id="u577" class="ax_default table_cell">
+          <img id="u577_img" class="img " src="images/修改密码/u577.png"/>
           <!-- Unnamed () -->
-          <div id="u559" class="text">
+          <div id="u578" class="text">
             <p><span>姓名:</span></p>
           </div>
         </div>
 
         <!-- Unnamed (单元格) -->
-        <div id="u560" class="ax_default table_cell">
-          <img id="u560_img" class="img " src="images/修改密码/u560.png"/>
+        <div id="u579" class="ax_default table_cell">
+          <img id="u579_img" class="img " src="images/修改密码/u579.png"/>
           <!-- Unnamed () -->
-          <div id="u561" class="text">
+          <div id="u580" class="text">
             <p><span>巫恒强</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u562" class="ax_default box_1">
-        <div id="u562_div" class=""></div>
+      <div id="u581" class="ax_default box_1">
+        <div id="u581_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u563" class="text">
+        <div id="u582" class="text">
           <p><span>修改密码</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u564" class="ax_default text_field">
-        <input id="u564_input" type="text" value=""/>
+      <div id="u583" class="ax_default text_field">
+        <input id="u583_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u565" class="ax_default label">
-        <div id="u565_div" class=""></div>
+      <div id="u584" class="ax_default label">
+        <div id="u584_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u566" class="text">
+        <div id="u585" class="text">
           <p><span>输入密码:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u567" class="ax_default label">
-        <div id="u567_div" class=""></div>
+      <div id="u586" class="ax_default label">
+        <div id="u586_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u568" class="text">
+        <div id="u587" class="text">
           <p><span>确认密码:</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u569" class="ax_default text_field">
-        <input id="u569_input" type="text" value=""/>
+      <div id="u588" class="ax_default text_field">
+        <input id="u588_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u570" class="ax_default primary_button">
-        <div id="u570_div" class=""></div>
+      <div id="u589" class="ax_default primary_button">
+        <div id="u589_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u571" class="text">
+        <div id="u590" class="text">
           <p><span>提交</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u572" class="ax_default primary_button">
-        <div id="u572_div" class=""></div>
+      <div id="u591" class="ax_default primary_button">
+        <div id="u591_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u573" class="text">
+        <div id="u592" class="text">
           <p><span>返回</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u574" class="ax_default label">
-        <div id="u574_div" class=""></div>
+      <div id="u593" class="ax_default label">
+        <div id="u593_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u575" class="text">
+        <div id="u594" class="text">
           <p><span>修改密码用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u576" class="ax_default label">
-        <div id="u576_div" class=""></div>
+      <div id="u595" class="ax_default label">
+        <div id="u595_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u577" class="text">
+        <div id="u596" class="text">
           <p><span>验证文本框</span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u578" class="ax_default line">
-        <img id="u578_img" class="img " src="images/个人信息/u509.png"/>
+      <div id="u597" class="ax_default line">
+        <img id="u597_img" class="img " src="images/个人信息/u522.png"/>
         <!-- Unnamed () -->
-        <div id="u579" class="text" style="display:none; visibility: hidden">
+        <div id="u598" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u580" class="ax_default">
-        <img id="u580_menu" class="img " src="images/index/u64_menu.png" alt="u580_menu"/>
+      <div id="u599" class="ax_default">
+        <img id="u599_menu" class="img " src="images/index/u64_menu.png" alt="u599_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u581" class="ax_default">
+        <div id="u600" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u582" class="ax_default menu_item">
-            <img id="u582_img" class="img " src="images/index/u62.png"/>
+          <div id="u601" class="ax_default menu_item">
+            <img id="u601_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u583" class="text">
+            <div id="u602" class="text">
               <p><span>巫恒强</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u584" class="ax_default sub_menu">
-          <img id="u584_menu" class="img " src="images/index/u68_menu.png" alt="u584_menu"/>
+        <div id="u603" class="ax_default sub_menu">
+          <img id="u603_menu" class="img " src="images/index/u68_menu.png" alt="u603_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u585" class="ax_default">
+          <div id="u604" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u586" class="ax_default menu_item">
-              <img id="u586_img" class="img " src="images/index/u70.png"/>
+            <div id="u605" class="ax_default menu_item">
+              <img id="u605_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u587" class="text">
+              <div id="u606" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u588" class="ax_default menu_item">
-              <img id="u588_img" class="img " src="images/index/u62.png"/>
+            <div id="u607" class="ax_default menu_item">
+              <img id="u607_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u589" class="text">
+              <div id="u608" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -305,29 +305,56 @@
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u590" class="ax_default line">
-        <img id="u590_img" class="img " src="images/login/u26.png"/>
+      <div id="u609" class="ax_default line">
+        <img id="u609_img" class="img " src="images/login/u26.png"/>
         <!-- Unnamed () -->
-        <div id="u591" class="text" style="display:none; visibility: hidden">
+        <div id="u610" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u592" class="ax_default line">
-        <img id="u592_img" class="img " src="images/学生列表/u450.png"/>
+      <div id="u611" class="ax_default line">
+        <img id="u611_img" class="img " src="images/学生列表/u457.png"/>
         <!-- Unnamed () -->
-        <div id="u593" class="text" style="display:none; visibility: hidden">
+        <div id="u612" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u594" class="ax_default label">
-        <div id="u594_div" class=""></div>
+      <div id="u613" class="ax_default label">
+        <div id="u613_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u595" class="text">
-          <p><span style="color:#00CC00;">修改密码用例图 接口:</span><a id="u596" class="link"><span style="color:#0000FF;">setPassword</span></a></p>
+        <div id="u614" class="text">
+          <p><span style="color:#00CC00;">修改密码用例图 接口:</span><a id="u615" class="link"><span style="color:#0000FF;">setPassword</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u616" class="ax_default link_button">
+        <div id="u616_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u617" class="text">
+          <p><span>评定成绩</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u618" class="ax_default label">
+        <div id="u618_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u619" class="text">
+          <p><span>老师评定成绩链接</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u620" class="ax_default line">
+        <img id="u620_img" class="img " src="images/index/u82.png"/>
+        <!-- Unnamed () -->
+        <div id="u621" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
