--- a/test6/ui/评定成绩.html
+++ b/test6/ui/评定成绩.html
@@ -144,7 +144,7 @@
           <option value="大三上">大三上</option>
           <option value="大三下">大三下</option>
           <option value="大二上">大二上</option>
-          <option value="大二小">大二小</option>
+          <option value="大二下">大二下</option>
           <option value="大一上">大一上</option>
           <option value="大一下">大一下</option>
         </select>
@@ -493,7 +493,7 @@
         <div id="u187_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u188" class="text">
-          <p><span>全部成绩提交按钮</span></p>
+          <p><span>按不同实验,不同的part评分,最后综合总分</span></p>
         </div>
       </div>
 
@@ -502,57 +502,48 @@
         <div id="u189_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u190" class="text">
-          <p><span>按不同实验,不同的part评分,最后综合总分</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u191" class="ax_default label">
-        <div id="u191_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u192" class="text">
           <p><span>评定成绩用例图</span></p>
         </div>
       </div>
 
       <!-- Unnamed (菜单) -->
-      <div id="u193" class="ax_default">
-        <img id="u193_menu" class="img " src="images/index/u64_menu.png" alt="u193_menu"/>
+      <div id="u191" class="ax_default">
+        <img id="u191_menu" class="img " src="images/index/u64_menu.png" alt="u191_menu"/>
 
         <!-- Unnamed (表格) -->
-        <div id="u194" class="ax_default">
+        <div id="u192" class="ax_default">
 
           <!-- Unnamed (Menu Item) -->
-          <div id="u195" class="ax_default menu_item">
-            <img id="u195_img" class="img " src="images/index/u62.png"/>
+          <div id="u193" class="ax_default menu_item">
+            <img id="u193_img" class="img " src="images/index/u62.png"/>
             <!-- Unnamed () -->
-            <div id="u196" class="text">
+            <div id="u194" class="text">
               <p><span>老师</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (菜单) -->
-        <div id="u197" class="ax_default sub_menu">
-          <img id="u197_menu" class="img " src="images/index/u68_menu.png" alt="u197_menu"/>
+        <div id="u195" class="ax_default sub_menu">
+          <img id="u195_menu" class="img " src="images/index/u68_menu.png" alt="u195_menu"/>
 
           <!-- Unnamed (表格) -->
-          <div id="u198" class="ax_default">
+          <div id="u196" class="ax_default">
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u199" class="ax_default menu_item">
-              <img id="u199_img" class="img " src="images/index/u70.png"/>
+            <div id="u197" class="ax_default menu_item">
+              <img id="u197_img" class="img " src="images/index/u70.png"/>
               <!-- Unnamed () -->
-              <div id="u200" class="text">
+              <div id="u198" class="text">
                 <p><span>个人信息</span></p>
               </div>
             </div>
 
             <!-- Unnamed (Menu Item) -->
-            <div id="u201" class="ax_default menu_item">
-              <img id="u201_img" class="img " src="images/index/u62.png"/>
+            <div id="u199" class="ax_default menu_item">
+              <img id="u199_img" class="img " src="images/index/u62.png"/>
               <!-- Unnamed () -->
-              <div id="u202" class="text">
+              <div id="u200" class="text">
                 <p><span>安全退出</span></p>
               </div>
             </div>
@@ -561,38 +552,47 @@
       </div>
 
       <!-- Unnamed (水平线) -->
+      <div id="u201" class="ax_default line">
+        <img id="u201_img" class="img " src="images/评定成绩/u201.png"/>
+        <!-- Unnamed () -->
+        <div id="u202" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
       <div id="u203" class="ax_default line">
-        <img id="u203_img" class="img " src="images/login/u26.png"/>
+        <img id="u203_img" class="img " src="images/评定成绩/u203.png"/>
         <!-- Unnamed () -->
         <div id="u204" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
+      <!-- Unnamed (矩形) -->
+      <div id="u205" class="ax_default label">
+        <div id="u205_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u206" class="text">
+          <p><span style="color:#00CC00;">选择学期用例以及&nbsp; 接口:</span><a id="u207" class="link"><span style="color:#0000FF;">getCourses</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u208" class="ax_default label">
+        <div id="u208_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u209" class="text">
+          <p><span style="color:#00CC00;">选择课程用例以及&nbsp; 接口:</span><a id="u210" class="link"><span style="color:#0000FF;">getTerms</span></a></p>
+        </div>
+      </div>
+
       <!-- Unnamed (水平线) -->
-      <div id="u205" class="ax_default line">
-        <img id="u205_img" class="img " src="images/评定成绩/u205.png"/>
+      <div id="u211" class="ax_default line">
+        <img id="u211_img" class="img " src="images/评定成绩/u211.png"/>
         <!-- Unnamed () -->
-        <div id="u206" class="text" style="display:none; visibility: hidden">
+        <div id="u212" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u207" class="ax_default label">
-        <div id="u207_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u208" class="text">
-          <p><span style="color:#00CC00;">选择学期用例以及&nbsp; 接口:</span><a id="u209" class="link"><span style="color:#0000FF;">getCourses</span></a></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u210" class="ax_default label">
-        <div id="u210_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u211" class="text">
-          <p><span style="color:#00CC00;">选择课程用例以及&nbsp; 接口:</span><a id="u212" class="link"><span style="color:#0000FF;">getTerms</span></a></p>
         </div>
       </div>
 
@@ -605,21 +605,21 @@
         </div>
       </div>
 
-      <!-- Unnamed (水平线) -->
-      <div id="u215" class="ax_default line">
-        <img id="u215_img" class="img " src="images/评定成绩/u215.png"/>
+      <!-- Unnamed (矩形) -->
+      <div id="u215" class="ax_default box_1">
+        <div id="u215_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u216" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
+        <div id="u216" class="text">
+          <p><span>姓名:巫恒强</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u217" class="ax_default box_1">
+      <div id="u217" class="ax_default button">
         <div id="u217_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u218" class="text">
-          <p><span>姓名:巫恒强</span></p>
+          <p><span>上一个</span></p>
         </div>
       </div>
 
@@ -632,18 +632,9 @@
         </div>
       </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u221" class="ax_default button">
-        <div id="u221_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u222" class="text">
-          <p><span>上一个</span></p>
-        </div>
-      </div>
-
       <!-- Unnamed (下拉列表框) -->
-      <div id="u223" class="ax_default droplist">
-        <select id="u223_input">
+      <div id="u221" class="ax_default droplist">
+        <select id="u221_input">
           <option selected value="学生">学生</option>
           <option value="巫恒强">巫恒强</option>
           <option value="巫恒强2">巫恒强2</option>
@@ -653,56 +644,65 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u224" class="ax_default label">
-        <div id="u224_div" class=""></div>
+      <div id="u222" class="ax_default label">
+        <div id="u222_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u225" class="text">
+        <div id="u223" class="text">
           <p><span>可编辑的文本框</span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u226" class="ax_default line">
-        <img id="u226_img" class="img " src="images/评定成绩/u215.png"/>
+      <div id="u224" class="ax_default line">
+        <img id="u224_img" class="img " src="images/评定成绩/u224.png"/>
         <!-- Unnamed () -->
-        <div id="u227" class="text" style="display:none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (水平线) -->
-      <div id="u228" class="ax_default line">
-        <img id="u228_img" class="img " src="images/评定成绩/u228.png"/>
-        <!-- Unnamed () -->
-        <div id="u229" class="text" style="display:none; visibility: hidden">
+        <div id="u225" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u230" class="ax_default label">
-        <div id="u230_div" class=""></div>
+      <div id="u226" class="ax_default label">
+        <div id="u226_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u231" class="text">
-          <p><span style="color:#00CC00;">学生列表用例以及 接口:</span><a id="u232" class="link"><span style="color:#0000FF;">getStudents</span></a></p>
+        <div id="u227" class="text">
+          <p><span style="color:#00CC00;">学生列表用例以及 接口:</span><a id="u228" class="link"><span style="color:#0000FF;">getStudents</span></a></p>
         </div>
       </div>
 
       <!-- Unnamed (水平线) -->
-      <div id="u233" class="ax_default line">
-        <img id="u233_img" class="img " src="images/评定成绩/u233.png"/>
+      <div id="u229" class="ax_default line">
+        <img id="u229_img" class="img " src="images/评定成绩/u229.png"/>
         <!-- Unnamed () -->
-        <div id="u234" class="text" style="display:none; visibility: hidden">
+        <div id="u230" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u235" class="ax_default label">
-        <div id="u235_div" class=""></div>
+      <div id="u231" class="ax_default label">
+        <div id="u231_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u236" class="text">
-          <p><span style="color:#00CC00;">下一个,或上一个学生 接口:</span><a id="u237" class="link"><span style="color:#0000FF;">getNextPrevStudent</span></a></p>
+        <div id="u232" class="text">
+          <p><span style="color:#00CC00;">下一个,或上一个学生 接口:</span><a id="u233" class="link"><span style="color:#0000FF;">getNextPreStudent</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u234" class="ax_default label">
+        <div id="u234_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u235" class="text">
+          <p><span style="color:#00CC00;">设置一个学生的部分实验成绩和评语接口:</span><a id="u236" class="link"><span style="color:#0000FF;">setOneStudentResults</span></a></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u237" class="ax_default line">
+        <img id="u237_img" class="img " src="images/评定成绩/u237.png"/>
+        <!-- Unnamed () -->
+        <div id="u238" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
     </div>
